# KKTerminal

./: .gitignore  ChangeLog  KKTerminal.mpz  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  filestoopen  prefsconfig  remakesourcelist
KKTerminal/: flagsandlibs  sources
KKTerminal/app/: Makefile.am  Makefile.in
KKTerminal/resources/man/: kkterminal.1
KKTerminal/resources/pixmaps/: KKTerminal.desktop
KKTerminal/src/: callbacks.cpp  callbacks.h  globals.cpp  globals.h  gui.cpp  gui.h  internet.h  main.cpp  prefs.cpp  prefs.h
